fixed website alignment

--- a/css/p1Specs.css
+++ b/css/p1Specs.css
@@ -11,6 +11,7 @@ html, body{
     margin: 0;
     padding: 0;
     display: flex;
+    flex-direction: column;
     font-family: 'Roboto', sans-serif;
 }
 #wrapper{
